--- a/Proposed Session Schedule.html
+++ b/Proposed Session Schedule.html
@@ -5,6 +5,11 @@
   <div class=head>
     <p>Client Individualized One-to-One Direct ABA Treatment Service Session Outline <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(SessionOutline)'></i></p>
   </div>
+  <div>
+    <br>
+    <br>
+    <br>
+  </div>
   <div class=med>
     <table>
       <col width=15%>
