--- a/Vineland Assessment.html
+++ b/Vineland Assessment.html
@@ -17,7 +17,7 @@
 <div class=basic>
 <h4> Overall Summary</h4>
   <div class=basic>
-    <textarea id="vinelandSummary" name="vinelaneSummary" rows="23" style="width:99%;">The Vineland-3 is a standardized measure of adaptive behavior-the things that people do to function in their everyday lives. Whereas ability measures focus on what the examinee can do in a testing situation, the Vineland-3 focuses on what he or she actually does in daily life. Because it is a norm-based instrument, the examinee's adaptive functioning is compared to that of others his or her age.
+    <textarea id="vinelandSummary" name="vinelandSummary" rows="23" style="width:99%;">The Vineland-3 is a standardized measure of adaptive behavior-the things that people do to function in their everyday lives. Whereas ability measures focus on what the examinee can do in a testing situation, the Vineland-3 focuses on what he or she actually does in daily life. Because it is a norm-based instrument, the examinee's adaptive functioning is compared to that of others his or her age.
 
 X was evaluated using the Vineland-3 Comprehensive Interview Form on XX/XX/XXXX. Parent First & Last Name, X’s mother, was interviewed by BACS Name, who completed the form.
 
@@ -37,6 +37,9 @@ X's score for the Socialization domain reflects her functioning in social situat
   <h4>Developmental Assessment Score Summary <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(DASS)'></i></h4>
   <label for="vinelandScoreTableFile">Upload Score Summary File:</label>
   <input type="file" id='vinelandScoreTableFile' name='vinelandScoreTableFile' onchange="fileUpload(this, 'vinelandTableCont','vinelandTableImage')"> <p id=vinelandTableCont> </p> <img id=vinelandTableImage src= '#' style="width:100%; max-width: 800px;"/>
+  <br>
+  <br>
+      <input type='button' id='vinelandSubmit' value='Upload Files'>
   <div>
     <table class="shortTable">
       <col width="30%">
