--- a/Client Risk Associated with Treatment.html
+++ b/Client Risk Associated with Treatment.html
@@ -1,5 +1,5 @@
 <div style="border-bottom: 1px solid #666;">
-  <h2>Client Risk Associated With Treatment <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(ClientRisk)'></i></h2>
+  <h2>Client Risk Associated With Treatment <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Client Risk Associated with Treatment",ClientRisk)'></i></h2>
 </div>
 <div class=basic id=ClientRisk>
  <div class=med>
