--- a/Coordination of Care.html
+++ b/Coordination of Care.html
@@ -3,7 +3,7 @@
 </div>
 <div class=basic id=CoordinationofCare>
   <div class=head>
-    <p> Description of Care Coordination Activities to Date: <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(CoordinationofCare)'></i></p>
+    <p> Description of Care Coordination Activities to Date: <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Description of Care Coordination Activities",CoordinationofCare)'></i></p>
   </div>
   <h4> **Please list all Coordination of care activities that have occurred within the past 6-months** </h4>
   <div class=med>
