--- a/Current Schedule.html
+++ b/Current Schedule.html
@@ -1,5 +1,5 @@
 <div style="border-bottom: 1px solid #666;">
-  <h2>Current Schedule <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currSchedule)'></i></h2>
+  <h2>Current Schedule <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Current Schedule",currSchedule)'></i></h2>
 </div>
 
 <div class=basic style="padding: 6px;" id=currSchedule>
