--- a/Family Concerns.html
+++ b/Family Concerns.html
@@ -3,7 +3,7 @@
 </div>
 <div class=basic id=famComp>
   <div class="head">
-    <p>Family Composition <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(famComp)'></i></p>
+    <p>Family Composition <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Family Composition",famComp)'></i></p>
   </div>
   <div class="data" style="padding: 18px;">
   <textarea id="FamilyComp" rows= "4" style="width: 99%; font-style: Times New Roman;" name="Family Composition"> [Family Composition Information] </textarea>
@@ -12,7 +12,7 @@
 
 <div class=basic id=famConc>
   <div class="head">
-    <p> Family Primary Concerns <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(famConc)'></i></p>
+    <p> Family Primary Concerns <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Family Concerns",famConc)'></i></p>
   </div>
   <div class="data">
     <p> The Client's parents'/guardians' primary concerns include increasing the Clients' skills in the following developmental domains/areas: </p>
@@ -55,7 +55,7 @@
 
 <div class=basic id=famMalBeh>
   <div class=head>
-    <p> Maladaptive Behaviors Identified By Family <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(famMalBeh)'></i></p>
+    <p> Maladaptive Behaviors Identified By Family <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Identified Maladaptive Behaviors",famMalBeh)'></i></p>
   </div>
   <div class=data id=MaladaptiveList>
   </div>
