--- a/Impairments and Skill Assessment.html
+++ b/Impairments and Skill Assessment.html
@@ -2,13 +2,13 @@
   <h2>Impairments and Skill Assessment</h2>
 </div>
 <div class=basic id=currStrengths>
-  <h4>Client's capabilities/strengths & family support system:   <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currStrengths)'></i></h4>
+  <h4>Client's capabilities/strengths & family support system:   <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Capabilities/Strengths & Family Support System",currStrengths)'></i></h4>
   <textarea id="CCSFSS" name="Client's capabilities & support system" style="width: 99%;" rows="3">
   X is an engaging young boy/girl with a high activity level. He has emerging communication skills and is able to indicate his basic wants and needs in a verbal format. X’s parents are supported by multiple extended family members who live within close physical proximity to X and his/her family.
   </textarea>
 </div>
 <div class=basic id=currImpairments>
-  <h4>Current Impairments<i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currImpairments)'></i></h4>
+  <h4>Current Impairments<i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currImpairments)'></i></h4>
   <div style="font-size: 14px;">
     <div class=basic>
       <table class=med style="height: 23px; padding: 0;" id=impairmentTable>
@@ -139,7 +139,7 @@
 </div>
 
 <div class=basic id=currDelays>
-  <h4>Current Delays in Skill Acquisition, Generalization, and Maintenance   <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currDelays)'></i></h4>
+  <h4>Current Delays in Skill Acquisition, Generalization, and Maintenance   <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Current Delays in Skill Acquisition, Generalization, and Maintenance",currDelays)'></i></h4>
    <div style="display:flex; padding: 10px;">
       <div style="width: 50%;">
         <p><strong> Communication Skills Domain: </strong></p>
