--- a/Maladaptive Behavior.html
+++ b/Maladaptive Behavior.html
@@ -3,7 +3,7 @@
 </div>
 <div class=basic id=MalBehaviorDiv>
   <div class=head>
-    <p> Maladaptive Behavior Safety Risk Assessment Scores <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(MalBehaviorDiv)'></i></p>
+    <p> Maladaptive Behavior Safety Risk Assessment Scores <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Maladaptive Behavior Safety Risk Assessment Scores",MalBehaviorDiv)'></i></p>
   </div>
   <div>
     <div style="font-size: 14px; width: 25%">
@@ -29,7 +29,7 @@
 </div>
 <div class=basic id=AntCons>
   <div class=head>
-  <p> Identified Antecedents & Consequences <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(AntCons)'></i></p>
+  <p> Identified Antecedents & Consequences <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Identified Antecedents & Consequences",AntCons)'></i></p>
   </div>
   <div id=A&CContainer>
   </div>
@@ -46,7 +46,7 @@
 </div>
 <div class=basic id=RecTreatment>
   <div class=head>
-    <p> Recommendations for Maladaptive Behavioral Treatment: <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(RecTreatment)'></i></p>
+    <p> Recommendations for Maladaptive Behavioral Treatment: <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='setMissing(RecTreatment)'></i></p>
   </div>
   <div id=treatmentList>
     <h4> Proactive Strategies/Recommendations:</h4>
