--- a/Medical Necessity Assessment.html
+++ b/Medical Necessity Assessment.html
@@ -3,7 +3,7 @@
 </div>
 <div class=basic id=BarriersLearning>
   <div class=head>
-    <p> Barriers/Learning Considerations: <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(BarriersLearning)'></i></p>
+    <p> Barriers/Learning Considerations: <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Barriers/Learning Considerations",BarriersLearning)'></i></p>
   </div>
   <div class=med>
   <table>
@@ -101,7 +101,7 @@
 </div>
 <div class=basic id=CoreSkills>
   <div class=med>
-   <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(CoreSkills)'></i>
+   <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Core Skills Hours",CoreSkills)'></i>
     <table>
       <tr>
         <th> Core Skill Areas Affected by ASD </th>
@@ -168,7 +168,7 @@
   </div>
 </div>
 <div class=basic id=DirectServiceRequest>
-  <h4> Direct Service Request <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(DirectServiceRequest)'></i></h4>
+  <h4> Direct Service Request <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Direct Service Request",DirectServiceRequest)'></i></h4>
   <label for=DSR1T1>How many hours, per week, of one-to-one treatment? </label><input type=number id=DSR1T1 name="Hours of One-to-One Treatment"><br>
   <label for=DSR1T1>IEP Meeting date scheduled date:</label><input type=date id=DSR1T2 name="IEP Meeting Date"><br>
 
