--- a/Reinforcer Assessment Results.html
+++ b/Reinforcer Assessment Results.html
@@ -11,7 +11,7 @@
   
   <div class=basic id=CurrentReinforcers>
     <div class=head>
-      <p>Current Reinforcers <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(CurrentReinforcers)'></i></p>
+      <p>Current Reinforcers <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Current Reinforcers",CurrentReinforcers)'></i></p>
     </div>
     <div class=med>
     <table>
