--- a/Vineland Assessment.html
+++ b/Vineland Assessment.html
@@ -2,7 +2,7 @@
   <h2>Vineland Assessment</h2>
 </div>
 <div class=basic id=VinelandFormReport>
-<h4>Vineland Adaptive Behavior Scales, Third Edition (Vineland™-3) Comprehensive Interview Form Report <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(VinelandFormReport)'></i></h4>
+<h4>Vineland Adaptive Behavior Scales, Third Edition (Vineland™-3) Comprehensive Interview Form Report <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Vineland™-3 Comprehensive Interview Form Report",VinelandFormReport)'></i></h4>
 <label for="vinelandDate" style="width: 50px;">Test Date: </label>
 <input type="date" id="vinelandDate" name="vinelandDate"><br>
 <label for="vinelandRespondent" style="width: 50px;"> Interview Respondent Name: </label>
@@ -14,8 +14,8 @@
 <label for="vinelandIQScore" style="width: 50px;">Overall IQ Score: </label>
 <input type="text" id="vinelandIQScore" name="vinelandIQScore"><br>
 </div>
-<div class=basic>
-<h4> Overall Summary</h4>
+<div class=basic id=VinelandSummary>
+<h4> Overall Summary<i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Overall Summary",VinelandSummary)'></i></h4>
   <div class=basic>
     <textarea id="vinelandSummary" name="vinelandSummary" rows="23" style="width:99%;">The Vineland-3 is a standardized measure of adaptive behavior-the things that people do to function in their everyday lives. Whereas ability measures focus on what the examinee can do in a testing situation, the Vineland-3 focuses on what he or she actually does in daily life. Because it is a norm-based instrument, the examinee's adaptive functioning is compared to that of others his or her age.
 
@@ -34,12 +34,11 @@ X's score for the Socialization domain reflects her functioning in social situat
   </div>
 </div>
 <div class=basic id=DASS>
-  <h4>Developmental Assessment Score Summary <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(DASS)'></i></h4>
+  <h4>Developmental Assessment Score Summary <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Developmental Assessment Score Summary",DASS)'></i></h4>
   <label for="vinelandScoreTableFile">Upload Score Summary File:</label>
-  <input type="file" id='vinelandScoreTableFile' name='vinelandScoreTableFile' onchange="fileUpload(this, 'vinelandTableCont','vinelandTableImage')"> <p id=vinelandTableCont> </p> <img id=vinelandTableImage src= '#' style="width:100%; max-width: 800px;"/>
+  <input type='button' onclick='createPicker(vinelandCallBack);' id='VinelandDrive' value='Drive Picker'> <p id=vinelandTableCont> </p> <img id=vinelandTableImage src= '#' style="width:100%; max-width: 800px;"/>
   <br>
   <br>
-      <input type='button' id='vinelandSubmit' value='Upload Files'>
   <div>
     <table class="shortTable">
       <col width="30%">
