--- a/content_css.html
+++ b/content_css.html
@@ -171,4 +171,13 @@
 }
 
 <!-- End Content Containers -->
+
+#returnComment {
+  display: none;
+}
+
+.checkbox:hover{
+  background-color: #f0f0f0;
+}
+
 </style>
