--- a/Nav/Side Bar _css.html
+++ b/Nav/Side Bar _css.html
@@ -91,7 +91,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 12px;
   color: white;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 19px;
 }
 
 .navbar a:hover {
@@ -107,6 +107,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
     float: none;
     display: block;
   }
+}
+
+.logo {
+  width: 40px;
+  margin: 3px;
+  height: auto;
 }
 
 <!-- End Nav Bar -->
