--- a/Past and Current Services.html
+++ b/Past and Current Services.html
@@ -5,7 +5,7 @@
 <br>
 
 <div style="border: 1px solid #666; padding: 5px; margin: 10px 0; text-align: left;" id=pastServices>
-  <h4>Past Services   <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(pastServices)'></i></h4>
+  <h4>Past Services   <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Past Services",pastServices)'></i></h4>
   <p> 
     Has the client previously received <strong>Early Intervention (EI)</strong> treatment services? 
     <input type="radio" id="EIYes" name="Early Intervention" value="Yes"> <label for="EIYes"> Yes </label>
@@ -119,7 +119,7 @@
 <!------------------------------- Current Services ---------------------------->
 
 <div style="border: 1px solid #666; padding: 5px; margin: 10px 0; text-align: left;" id=currentServices>
-  <h4>Current Services   <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(currentServices)'></i></h4>
+  <h4>Current Services   <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Current Services",currentServices)'></i></h4>
   <p> 
     Is the client currently receiving EI treatment services? 
     <input type="radio" id="CEIYes" name="CEarlyIntervention" value="Yes"> <label for="CEIYes"> Yes </label>
@@ -239,14 +239,8 @@
   <div id='isIEPTrue' hidden>
     <h2>Service Delivery IEP:</h2>
     <br>
-    <strong>Upload Services in Other Settings Table: </strong><input type="file" id='IEPTableFile' name='IEPTableFile' onchange="fileUpload(this, 'IEPTableCont','IEPTableImage', 'IEPTable')"> <p id=IEPTableCont> </p> <img id=IEPTableImage src= '#' style="width:100%; max-width: 800px;"/>
+    <strong>Upload Services in Other Settings Table: </strong><input type='button' onclick='createPicker(iepCallBack);' id='IEPDrive' value='Drive Picker'><p id=IEPTableCont> </p> <img id=IEPTableImage src= 'https://drive.google.com/file/d/1kCsj1dgc4is4FztQNIy7Hpge2Kzsr7gz/preview' style="width:100%; max-width: 800px;"/>
     <br>
-    <br>
-    <input type='button' id='IEPSubmit' value='Upload Files'>
-        <div>
-        <p id='result'></p>
-    </div>
-   <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=onApiLoad"></script>
   </div>
   <div id='isEvalTrue' hidden>
     A Special Education Eligibility Determination Meeting has been scheduled for: 
