--- a/Treatment Methods.html
+++ b/Treatment Methods.html
@@ -2,10 +2,10 @@
   <h2>Treatment Methods</h2>
 </div>
 <div class=basic>
-  <div class=head><p> Instructional Methods <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(instructionalMethodsChecklist)'></i></p></div>
+  <div class=head><p> Instructional Methods <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Instructional Methods",instructionalMethodsChecklist)'></i></p></div>
   <div id=instructionalMethodsChecklist style="border-bottom: 1px solid #666;">
   </div><br>
-  <div class=head><p> Behavioral Methods <i class="fa fa-exclamation-circle" aria-hidden="true" title="Bookmark this section" onclick='setMissing(behavioralMethodsChecklist)'></i></p></div>
+  <div class=head><p> Behavioral Methods <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Behavioral Methods",behavioralMethodsChecklist)'></i></p></div>
   <div id=behavioralMethodsChecklist>
   </div>
 </div>
